Updated requirements.txt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,12 @@ djangorestframework>=3.14.0
 Pillow>=10.0.0
 pytz>=2023.3
 sqlparse>=0.4.4
+spacy
+transformers
+torch
+torchvision
+Pillow
+faiss-cpu
+mysql-connector-python
+python-dotenv
+scikit-learn
